// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellBody should render correctly 1`] = `
<Fragment>
  <JSXStyle
    css="__scoped"
    styleId="__scopedHash"
  />
  <td
    className="jsx-__scopedHash table__cell"
  >
    Default button
  </td>
</Fragment>
`;

exports[`CellHead should render correctly 1`] = `
<Fragment>
  <JSXStyle
    css="__scoped"
    styleId="__scopedHash"
  />
  <th
    className="jsx-__scopedHash table__cell"
  >
    Default button
  </th>
</Fragment>
`;

exports[`Row should render correctly 1`] = `
<Fragment>
  <JSXStyle
    css="__scoped"
    styleId="__scopedHash"
  />
  <tr
    className="jsx-__scopedHash table__row table__row--body"
  >
    Default button
  </tr>
</Fragment>
`;

exports[`Table should render correctly 1`] = `
<Fragment>
  <JSXStyle
    css="__scoped"
    styleId="__scopedHash"
  />
  <table
    className="jsx-__scopedHash table"
  >
    Default button
  </table>
</Fragment>
`;

exports[`TableBody should render correctly 1`] = `
<Fragment>
  <JSXStyle
    css="__scoped"
    styleId="__scopedHash"
  />
  <tbody
    className="jsx-__scopedHash table__body"
  >
    Default button
  </tbody>
</Fragment>
`;

exports[`TableHead should render correctly 1`] = `
<Fragment>
  <JSXStyle
    css="__scoped"
    styleId="__scopedHash"
  />
  <thead
    className="jsx-__scopedHash table__head"
  >
    Default button
  </thead>
</Fragment>
`;
